Changes in about us message

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<h3>BTECH(IT)</h3>
 	</div>
 	<div class="aboutus">
-		<p><b>Hello Commutatus,</b><br>
+		<p><b>Hello EveryOne,</b><br>
 		Welcome to my <b>website</b> <br>
 		To Work for an organisation which provide me the opportunity to improve my skills and knowledge to grow along with the organisation objective<br>
 		im passionate about web development and would love to work in organisation which provide excel web services</p>
