--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 <div class="contactus">
 		<div class="contactform">
 			<form action="index.html" method="post">
-				<input type="text" name="" class="inputtext" value="First Name">
-				<input type="text" name="" class="inputtext" value="Last Name">
-				<input type="text" name="" class="inputtext" value="Your Email">
+				<input type="text" name="" class="inputtext" placeholder="First Name">
+				<input type="text" name="" class="inputtext" placeholder="Last Name">
+				<input type="text" name="" class="inputtext" placeholder="Your Email">
 				<textarea cols="4" rows="6" class="inputmessage">Your Messages...!!!</textarea>
 				<input type="button" name="" class="submitbutton" value="Submit">
 			</form>
