--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<input type="text" name="" class="inputtext" placeholder="First Name">
 				<input type="text" name="" class="inputtext" placeholder="Last Name">
 				<input type="text" name="" class="inputtext" placeholder="Your Email">
-				<textarea cols="4" rows="6" class="inputmessage"> placeholder="Your Messages...!!!" </textarea>
+				<textarea cols="4" rows="6" class="inputmessage" placeholder="Your Messages...!!!">  </textarea>
 				<input type="button" name="" class="submitbutton" value="Submit">
 			</form>
 		</div>
