--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h1>Anuj Garg</h1>
 	</div>
 	<div class="aboutus">
-		<p><b>Hello EveryOne,</b><br>
+		<p><b>Hello TietoEvry</b><br>
 	</div>
 
 	<div class="gallery">
