--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h1>Anuj Garg</h1>
 	</div>
 	<div class="aboutus">
-		<p><b>Hello TietoEvry</b><br>
+		<p><b>Hello Everyone</b><br>
 	</div>
 
 	<div class="gallery">
@@ -45,11 +45,12 @@
 		</div>
 		
 		
+<script>
+var a = "We are Titans"
+console.log(a);
+</script>
 		
-		
-		
-		
-	</div>
+</div>
 
 
 		 
