--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
 		
 		
 <script>
-const b = "We are ciphers"
-console.log(b);
-</script>	
+var a = "We are Titans"
+console.log(a);
+</script>
 		
-		
-	</div>
+</div>
 
 
 		 
